[BUGFIX] Web>Page gridColumn outter spacing
Fix grid column container width to reach 100% without previous
gap on the right side.

Resolves: #63202
Releases: master
Reviewed-on: http://review.typo3.org/34803
Tested-by: Christoph Hofmann <typo3@its-hofmann.de>
Tested-by: Frank Nägler <typo3@naegler.net>

--- a/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/visual/_module_web_page.less
+++ b/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/visual/_module_web_page.less
@@ -19,9 +19,12 @@ Web > Page
 	width: 100%;
 }
 
+.t3-gridContainer {
+	margin: 0px -12px;
+}
+
 .t3-page-columns {
 	width: 100%;
-	margin: 0px -12px;
 }
 
 .t3-page-colHeader {
